# iis2dlpc-rs

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: publish.yml
examples/activity_stm32f401re/: Cargo.toml  README.md
examples/activity_stm32f401re/src/: main.rs
examples/activity_stm32f401re_embassy/: Cargo.toml  README.md
examples/activity_stm32f401re_embassy/src/: main.rs
examples/free_fall_stm32f401re/: Cargo.toml  README.md
examples/free_fall_stm32f401re/src/: main.rs
examples/free_fall_stm32f401re_embassy/: Cargo.toml  README.md
examples/free_fall_stm32f401re_embassy/src/: main.rs
examples/orientation_stm32f401re/: Cargo.toml  README.md
examples/orientation_stm32f401re/src/: main.rs
examples/orientation_stm32f401re_embassy/: Cargo.toml  README.md
examples/orientation_stm32f401re_embassy/src/: main.rs
examples/read_data_polling_stm32f401re/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re/src/: main.rs
examples/read_data_polling_stm32f401re_embassy/: Cargo.toml  README.md
examples/self_test_stm32f401re/: Cargo.toml  README.md
examples/self_test_stm32f401re_embassy/: Cargo.toml  README.md
examples/tap_double_stm32f401re/: Cargo.toml  README.md
examples/tap_double_stm32f401re_embassy/: Cargo.toml  README.md
examples/tap_single_stm32f401re/: Cargo.toml  README.md
examples/tap_single_stm32f401re_embassy/: Cargo.toml  README.md
examples/wake_up_stm32f401re/: Cargo.toml  README.md
examples/wake_up_stm32f401re_embassy/: Cargo.toml  README.md
src/: lib.rs
src/register/: main.rs
(+9 files in other folders)
