[package]
name = "iis2dlpc-rs"
version = "1.0.0"
edition = "2024"
rust-version = "1.87.0"
readme = "README.md"
license = "BSD-3-Clause"
categories = ["embedded", "no-std"]
keywords = ["st", "mems", "accelerometer", "low-power", "high-performance"]
repository = "https://github.com/STMicroelectronics/iis2dlpc-rs"
description = """
    Driver for the IIS2DLPC ultra-low-power three-axis accelerometer with selectable 
    full scale, multiple power modes, FIFO, and advanced motion detection.
"""

[lib]
doctest = false

[dependencies]
bitfield-struct = "0.11.0"
embedded-hal = "1.0.0"
derive_more = { version = "2.0.1", default-features = false, features = [ "try_from" ] }
st-mems-bus = "1.0.1"
st-mem-bank-macro = "1.0.0"

# By default the bit order is assumed ad Least Significant Bit.
[features]
bit_order_msb = []
